fix frames overlapping

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -38,7 +38,7 @@ body {
 }
 
 .layers {
-	background-color: #FFF;
+	background-color: #EEE;
 
 	width: var(--layers-width);
 	height: 100%;
@@ -69,7 +69,7 @@ body {
 }
 
 .frames {
-	background-color: #FFF;
+	background-color: #EEE;
 
 	width: calc(100% - var(--layers-width));
 	height: 100%;
